[package]
name = "openzwave"
version = "0.1.1"
authors = ["Julien Wajsberg <felash@gmail.com>", "Dave Hylands <dhylands@gmail.com>"]
description = "A Rust wrapper to the opensource OpenZwave library"
documentation = "https://fxbox.github.io/openzwave-rust/openzwave/"
repository = "https://github.com/fxbox/openzwave-rust"
readme = "README.md"
license = "MPL-2.0"
keywords = ["zwave"]
edition = "2018"

[features]
default = []
serde_serialization = ["serde", "serde_json"]

[dependencies]
openzwave-sys = { path = "openzwave-sys", version = "0.1.1" }
libc = "0.2"
itertools = "0.4.11"
log = { version = "0.4", features = [] }
env_logger  = { version = "0.8", features = [] }
tokio = { version = "1.0", features = ["full"] }
async-trait  = { version = "0.1", features = [] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

